# Anytron

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.beads/: daemon-error  issues.jsonl
.github/workflows/: ci.yml  release.yml
examples/: anytron.toml
openspec/: project.md
openspec/specs/anytron/: spec.md
src/: error.rs  lib.rs  main.rs
src/cli/: args.rs  commands.rs  mod.rs
src/config/: anytron_toml.rs  mod.rs
src/discovery/: episode.rs  mod.rs  scanner.rs
src/extractor/: ffmpeg.rs  mod.rs  subtitle.rs
src/generator/: assets.rs  html.rs  mod.rs  site.rs
src/indexer/: mod.rs  search.rs
src/subtitle/: ass.rs  mod.rs  srt.rs  types.rs  vtt.rs
tests/: integration_test.rs
tests/fixtures/: sample.ass  sample.srt  sample.vtt
