[package]
name = "anytron"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
authors = ["Anytron Contributors"]
description = "Generate static websites for TV show quote search and meme generation"
license = "MIT"
repository = "https://github.com/bkero/anytron"
homepage = "https://github.com/bkero/anytron"
documentation = "https://docs.rs/anytron"
readme = "README.md"
keywords = ["meme", "subtitles", "frinkiac", "tv-shows", "static-site"]
categories = ["command-line-utilities", "multimedia"]
exclude = [
    "samples/",
    "test_output/",
    ".github/",
    "*.mkv",
    "*.mp4",
    "*.avi",
]

[dependencies]
# CLI framework
clap = { version = "4", features = ["derive"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Error handling
anyhow = "1"
thiserror = "1"

# Parallelism
rayon = "1"

# Asset embedding
rust-embed = "8"

# Progress display
indicatif = "0.17"

# File system utilities
walkdir = "2"

# Regex for parsing
regex = "1"
lazy_static = "1"

# HTTP server for serve command
tiny_http = "0.12"

# URL encoding/decoding
urlencoding = "2"

# Template rendering
minijinja = "2"

# Logging
log = "0.4"
env_logger = "0.11"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"

[[bin]]
name = "anytron"
path = "src/main.rs"

[profile.release]
lto = true
codegen-units = 1
strip = true
